--- a/css/main.css
+++ b/css/main.css
@@ -751,6 +751,9 @@ align-items: center;
     .about-right{
         padding-top: 30px;
     }
+    .bast-minlist{
+        margin: 20px 0px;
+    }
     .book .container{
         display: flex;
         flex-wrap: wrap;
